# gateway_description

./: .gitattributes  CMakeLists.txt  README.md  package.xml
config/: big_arm_control.yaml  little_arm_control.yaml
docs/: on_importing_glb_files_gateway.md
gateway_description/: CMakeLists.txt  package.xml
gateway_description/launch/: view_gateway.launch  view_gateway.launch.py  view_gateway_assembled.launch  view_gateway_assembled.launch.py
gateway_description/meshes/big_arm/: big_arm_link_2.dae  big_arm_link_6.dae  big_arm_link_7.dae
gateway_description/meshes/ermxl/: ermxl.dae
gateway_description/meshes/little_arm/: little_arm.dae  little_arm_link_1.dae  little_arm_link_2.dae  little_arm_link_3.dae  little_arm_link_6.dae  little_arm_link_7.dae
gateway_description/meshes/maxar_ppe/: maxar_ppe.dae
gateway_description/meshes/ng_halo/: ng_halo.dae
gateway_description/robots/: big_arm.urdf.xacro  gateway.urdf.xacro  little_arm.urdf.xacro
gateway_description/robots/original_urdf/: gateway_original.urdf.xacro
gateway_description/rviz/: view_gateway.rviz  view_gateway_assembled.rviz  view_robot.rviz
gateway_description/xacro/: big_arm_macro.xacro  little_arm_macro.xacro
launch/: gateway.launch.py  gateway_gz.launch.py  gateway_setup.launch.py  gateway_sim.launch.py  spawn_big_arm.launch.py  spawn_gateway.launch.py  spawn_little_arm.launch.py  view_gateway_assembled.launch.py
meshes/big_arm/: big_arm.dae  big_arm_link_1.dae  big_arm_link_3.dae  big_arm_link_4.dae  big_arm_link_5.dae  big_arm_link_8.dae
meshes/ihab/: ihab.dae
meshes/little_arm/: little_arm_link_4.dae  little_arm_link_5.dae  little_arm_link_8.dae  little_arm_link_9.dae
meshes/us_lab_segments/: US_Lab_AftEnd.dae  US_Lab_DeckReduction.dae  US_Lab_FwdEnd.dae  US_Lab_OverheadReduction.dae  US_Lab_PortReduction.dae  US_Lab_starboardReduction.dae  model.config  model.sdf
models/moon/: model.sdf
robots/: big_arm.urdf.xacro  gateway.urdf.xacro  gateway_body.urdf.xacro  little_arm.urdf.xacro
robots/original_urdf/: gateway_original.urdf.xacro
rviz/: view_gateway.rviz  view_gateway_assembled.rviz
scripts/: move_big_arm  move_little_arm
worlds/: cislunar.sdf
xacro/: big_arm.gazebo.xacro  big_arm_macro.xacro  gateway_body_macro.xacro  little_arm.gazebo.xacro  little_arm_macro.xacro
