<?xml version="1.0"?>
<package format="3">
  <name>gateway_description</name>
  <version>1.0.0</version>
  <description>The gateway_description package</description>

  <maintainer email="andrew.p.sharp@nasa.gov">Andrew Sharp</maintainer>

  <license>NASA-1.3</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  
</package>
